Changing button color

--- a/app/src/main/res/layout/fragment_register_user.xml
+++ b/app/src/main/res/layout/fragment_register_user.xml
@@ -71,5 +71,8 @@
         android:nestedScrollingEnabled="true"
         android:focusable="false"
         android:clickable="false"
-        android:focusableInTouchMode="false"/>
+        android:focusableInTouchMode="false"
+        android:background="#009688"
+        android:textColor="#ffffff"
+        android:textSize="14dp"/>
 </RelativeLayout>
