--- a/app/src/main/res/layout/fragment_register_user.xml
+++ b/app/src/main/res/layout/fragment_register_user.xml
@@ -3,7 +3,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:context="gppmds.wikilegis.view.RegisterUserFragment"
-                android:background="@color/abc_search_url_text_normal">
+                android:background="@drawable/background">
 
     <!-- TODO: Update blank fragment layout -->
 
