--- a/app/src/main/res/layout/fragment_register_user.xml
+++ b/app/src/main/res/layout/fragment_register_user.xml
@@ -1,9 +1,10 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:context="gppmds.wikilegis.view.RegisterUserFragment"
-                android:background="@drawable/background">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="gppmds.wikilegis.view.RegisterUserFragment"
+    android:background="@drawable/background">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -15,7 +16,7 @@
         android:id="@+id/firstNameField"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="138dp"
+        android:layout_marginTop="150dp"
         android:hint="Nome"/>
 
     <EditText
@@ -47,7 +48,7 @@
         android:layout_below="@+id/emailField"
         android:layout_centerHorizontal="true"
         android:hint="Senha"/>
-        />
+    />
 
     <EditText
         android:layout_width="wrap_content"
@@ -66,7 +67,7 @@
         android:id="@+id/registerButton"
         android:layout_below="@+id/passwordConfirmationField"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="41dp"
+        android:layout_marginTop="30dp"
         android:singleLine="false"
         android:nestedScrollingEnabled="true"
         android:focusable="false"
@@ -84,4 +85,50 @@
         android:layout_marginTop="39dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
+
+    <ImageView
+        android:layout_width="60px"
+        android:layout_height="60px"
+        android:src="@drawable/userName"
+        android:id="@+id/imageViewUserName"
+        android:layout_alignTop="@+id/firstNameField"
+        android:layout_toStartOf="@+id/firstNameField"
+        android:layout_alignBottom="@+id/firstNameField" />
+
+    <ImageView
+        android:layout_width="60px"
+        android:layout_height="60px"
+        android:src="@drawable/userName"
+        android:id="@+id/imageViewLastName"
+        android:layout_alignTop="@+id/lastNameField"
+        android:layout_toStartOf="@+id/lastNameField"
+        android:layout_above="@+id/emailField" />
+
+    <ImageView
+        android:layout_width="60px"
+        android:layout_height="60px"
+        android:src="@drawable/emailUser"
+        android:id="@+id/imageViewEmailUser"
+        android:layout_alignBottom="@+id/emailField"
+        android:layout_below="@+id/lastNameField"
+        android:layout_alignStart="@+id/imageViewLastName" />
+
+    <ImageView
+        android:layout_width="60px"
+        android:layout_height="60px"
+        android:src="@drawable/passwordUser"
+        android:id="@+id/imageViewPasswordUser"
+        android:layout_alignTop="@+id/passwordField"
+        android:layout_toStartOf="@+id/passwordField"
+        android:layout_alignBottom="@+id/passwordField" />
+
+    <ImageView
+        android:layout_width="60px"
+        android:layout_height="60px"
+        android:src="@drawable/passwordUser"
+        android:id="@+id/imageViewConfirmationPasswotd"
+        android:layout_alignBottom="@+id/passwordConfirmationField"
+        android:layout_toStartOf="@+id/passwordConfirmationField"
+        android:layout_alignTop="@+id/passwordConfirmationField" />
+
 </RelativeLayout>
