--- a/app/src/main/res/layout/activity_register_user.xml
+++ b/app/src/main/res/layout/activity_register_user.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:id="@+id/content_panel"
-    tools:context=".view.RegisterUserActivity"
+    tools:context=".gppmds.wikilegis.view.RegisterUserActivity"
     android:background="@color/abc_search_url_text_normal">
 
     <android.support.design.widget.AppBarLayout
