--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="gppmds.wikilegis.view.LoginFragment"
+    tools:context="gppmds.wikilegis.gppmds.wikilegis.view.LoginFragment"
     android:background="@drawable/background">
 
     <ImageView
