--- a/app/src/main/res/layout/fragment_filtering.xml
+++ b/app/src/main/res/layout/fragment_filtering.xml
@@ -1,13 +1,10 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="gppmds.wikilegis.view.FilteringFragment">
+    tools:context="gppmds.wikilegis.view.FilteringFragment"
+    android:background="@drawable/background">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
 
-</FrameLayout>
+</RelativeLayout>
