--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -13,11 +13,12 @@
         android:layout_marginTop="39dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
+
     <Button
         android:layout_width="300px"
         android:layout_height="wrap_content"
         android:text="Entrar"
-        android:id="@+id/registerButton"
+        android:id="@+id/loginButton"
         android:layout_marginTop="45dp"
         android:singleLine="false"
         android:nestedScrollingEnabled="true"
@@ -26,47 +27,48 @@
         android:background="#009688"
         android:textColor="#ffffff"
         android:textSize="14dp"
-        android:layout_below="@+id/passwordField"
-        android:layout_centerHorizontal="true" />
+        android:layout_below="@+id/passwordLoginField"
+        android:layout_centerHorizontal="true"
+        />
 
     <ImageView
         android:layout_width="60px"
         android:layout_height="60px"
         android:src="@drawable/password_user"
         android:id="@+id/imageViewPasswordUser"
-        android:layout_alignTop="@+id/passwordField"
-        android:layout_toStartOf="@+id/passwordField"
-        android:layout_alignBottom="@+id/passwordField" />
+        android:layout_alignTop="@+id/passwordLoginField"
+        android:layout_toStartOf="@+id/passwordLoginField"
+        android:layout_alignBottom="@+id/passwordLoginField" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:ems="10"
-        android:id="@+id/firstNameField"
+        android:id="@+id/emailLoginField"
         android:hint="E-mail"
-        android:layout_below="@+id/imageViewLogo"
+        android:layout_marginTop="50dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp" />
+        android:layout_below="@+id/imageViewLogo"/>
 
     <ImageView
         android:layout_width="60px"
         android:layout_height="60px"
         android:src="@drawable/user_name"
         android:id="@+id/imageViewUserName"
-        android:layout_alignTop="@+id/firstNameField"
-        android:layout_toStartOf="@+id/firstNameField"
-        android:layout_alignBottom="@+id/firstNameField" />
+        android:layout_alignTop="@+id/emailLoginField"
+        android:layout_toStartOf="@+id/emailLoginField"
+        android:layout_alignBottom="@+id/emailLoginField" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
-        android:id="@+id/passwordField"
-        android:hint="Senha"
-        android:layout_below="@+id/firstNameField"
-        android:layout_centerHorizontal="true" />
+        android:id="@+id/passwordLoginField"
+        android:layout_below="@+id/emailLoginField"
+        android:layout_centerHorizontal="true"
+        android:hint="Senha"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -85,7 +87,7 @@
         android:text="      Cadastre-se"
         android:textColor="@color/abc_primary_text_material_light"
         android:layout_alignTop="@+id/editText"
-        android:layout_alignEnd="@+id/passwordField" />
+        android:layout_alignEnd="@+id/passwordLoginField" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -103,9 +105,11 @@
         android:text="Visitante"
         android:textColor="@color/abc_primary_text_material_light"
         android:layout_below="@+id/textView"
-        android:layout_toEndOf="@+id/editText" /><![CDATA[
+        android:layout_toEndOf="@+id/editText" />
+
+
+
 
     />
-    ]]><!-- TODO: Update blank fragment layout -->
 
 </RelativeLayout>
