--- a/app/src/main/res/layout/fragment_filtering.xml
+++ b/app/src/main/res/layout/fragment_filtering.xml
@@ -7,4 +7,8 @@
 
     <!-- TODO: Update blank fragment layout -->
 
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/listBILL" />
 </RelativeLayout>
