Creating a list view for bills

--- a/app/src/main/res/layout/fragment_filtering.xml
+++ b/app/src/main/res/layout/fragment_filtering.xml
@@ -3,12 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="gppmds.wikilegis.view.FilteringFragment"
-    android:background="@drawable/background">
+    android:background="@drawable/background"
+    android:clickable="false">
 
-    <!-- TODO: Update blank fragment layout -->
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/recycler_view"
+        android:layout_marginTop="70dp" />
 
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/listBILL" />
 </RelativeLayout>
